# pixie

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  error.rs  generator.rs  lib.rs  main.rs  rendering.rs
testdata/: terminal_render.ascii
