[package]
name = "pixie"
description = '''cli which generate a random image on a square grid based on a given word

Here an example of the sentence "hello word" on 10 pixel grid:
┌──────────────────────┐
│                      │
│   ████  ████  ████   │
│ ██  ██        ██  ██ │
│ ██████        ██████ │
│ ██  ████████████  ██ │
│ ██  ████    ████  ██ │
│                      │
│       ████████       │
│   ████  ████  ████   │
│     ████████████     │
└──────────────────────┘
'''

version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
image = "0.24.5"
imageproc = "0.23.0"
png = "0.17.7"
sha2 = "0.10.6"
uuid = { version = "1.3.0", features = ["v4"] }
